# qoir-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
benchmark/: Cargo.toml
benchmark/src/: main.rs
examples/: basic_usage.rs
examples/basic_usage/: Cargo.toml
examples/basic_usage/src/: main.rs
qoir-rs/: Cargo.toml  build.rs
qoir-rs/src/: lib.rs  main.rs  qoir.c
qoir-rs/tests/: decode.rs  encode.rs
qoir-rs/tests/output/: decode_then_encode_at_mouquins.qoir  encode_to_memory_basic.qoir  encode_to_path_basic.qoir  encode_to_writer_basic.qoir  external_to_qoir.qoir
src/: bindings.rs  decode.rs  encode.rs  lib.rs  main.rs  types.rs
tests/: decode.rs  encode.rs
