[package]
name = "qoir-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
doctest = false

[dependencies]
libc = "0.2.172"
clap = { version = "4.4.12", features = ["derive"] }
image = "0.24.7"
thiserror = "2.0.12"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.23"

[features]
default = ["simd"]
large_luts = []
simd = []
