[workspace]
name = "qoir-rs"
edition = "2024"
members = [
    "qoir-rs",
    "examples/basic_usage",
]

[workspace.dependencies]
libc = "0.2.172"
clap = { version = "4.4.12", features = ["derive"] }
image = "0.24.7"
thiserror = "2.0.12"
bindgen = "0.71.1"
cc = "1.2.23"

qoir-rs = { path = "qoir-rs" }
